ChannelList code now uses the convertView method like the PostList